--- a/project/home.html
+++ b/project/home.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Multi-Form Document Processing</title>
   <!-- Bootstrap CSS CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -15,6 +16,7 @@
       background: #fff;
       border-radius: 8px;
       padding: 20px;
+      margin: 0 auto;
       box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.1);
     }
     .hidden {
