--- a/project/home.html
+++ b/project/home.html
@@ -39,7 +39,7 @@
             <a class="nav-link" href="bank.html">Bank Details</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="form.html">Ulavar Attai</a>
+            <a class="nav-link" href="Form.html">Ulavar Attai</a>
           </li>
         </ul>
       </div>
