--- a/project/bank.html
+++ b/project/bank.html
@@ -186,9 +186,9 @@ ${ocrText}`;
       document.getElementById("bank-details").classList.remove("hidden");
     }
 
-    function submitBank() {
-      alert("Bank details submitted successfully!");
-    }
+   function submitAadhaar() {
+  document.getElementById("aadhaarForm").insertAdjacentHTML("afterend", "<div class='alert alert-success mt-3'>Aadhaar submitted successfully!</div>");
+}
   </script>
 </body>
 </html>
