--- a/project/Form.html
+++ b/project/Form.html
@@ -181,9 +181,9 @@ ${ocrText}`;
       document.getElementById("ulavar-details").classList.remove("hidden");
     }
 
-    function submitUlavar() {
-      alert("Ulavar Attai details submitted successfully!");
-    }
+    function submitAadhaar() {
+  document.getElementById("aadhaarForm").insertAdjacentHTML("afterend", "<div class='alert alert-success mt-3'>Aadhaar submitted successfully!</div>");
+}
   </script>
 </body>
 </html>
